<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_fixtures_and_results"
            android:icon="?android:attr/actionModePasteDrawable"
            android:title="@string/nav_fixtures_and_results" />
        <item
            android:id="@+id/nav_how_to_play"
            android:icon="@android:drawable/ic_dialog_info"
            android:title="@string/nav_how_to_play" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@android:drawable/ic_menu_my_calendar"
            android:title="@string/nav_profile" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/nav_settings" />
        <item
            android:id="@+id/nav_help"
            android:icon="@android:drawable/ic_menu_help"
            android:title="@string/nav_help" />
    </group>

</menu>
