<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_view_league"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.lastmanstandinglayout2.ViewLeagueActivity">

    <TextView
        android:text="@string/player_name_sample"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView60"
        android:textSize="18sp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/textView58"
        app:layout_constraintLeft_toLeftOf="@+id/textView58" />

    <TextView
        android:text="@string/player_name_sample"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView59"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@+id/textView57"
        android:layout_marginStart="48dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="48dp"
        android:textSize="18sp" />

    <TextView
        android:text="@string/league_name_sample"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView50"
        android:textSize="30sp"
        android:textStyle="normal|bold"
        android:textColor="@color/blackText"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="16dp"
        android:layout_marginTop="40dp"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:text="@string/your_pick"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView51"
        android:textSize="18sp"
        android:textColor="@color/blackText"
        app:layout_constraintLeft_toLeftOf="@+id/textView53"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/textView53" />

    <TextView
        android:text="@string/team_name_sample"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView52"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/textView51"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toRightOf="@+id/textView51"
        android:layout_marginLeft="16dp" />

    <TextView
        android:text="@string/deadline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView53"
        android:textSize="18sp"
        android:textColor="@color/blackText"
        android:layout_marginStart="32dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@+id/textView50" />

    <TextView
        android:text="@string/manage_league_link"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView54"
        android:layout_marginStart="8dp"
        app:layout_constraintLeft_toRightOf="@+id/textView50"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="16dp"
        android:textColor="@color/colorPrimary"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@+id/textView50"
        android:onClick="manageLeague"/>

    <TextView
        android:text="@string/deadline_sample"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView55"
        android:textSize="18sp"
        app:layout_constraintTop_toTopOf="@+id/textView53"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toRightOf="@+id/textView53"
        android:layout_marginLeft="16dp" />

    <TextView
        android:text="@string/pick_or_change_team"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView56"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/textView52"
        android:textSize="18sp"
        android:textColor="@color/colorPrimary"
        android:onClick="pickTeam"/>

    <TextView
        android:text="@string/standings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView57"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="16dp"
        android:layout_marginTop="48dp"
        app:layout_constraintTop_toBottomOf="@+id/textView56"
        android:textSize="24sp"
        android:textStyle="normal|bold"
        android:textColor="@color/blackText" />

    <TextView
        android:text="@string/player_name_sample"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView58"
        android:textSize="18sp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/textView59"
        app:layout_constraintLeft_toLeftOf="@+id/textView59" />
</android.support.constraint.ConstraintLayout>
