<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_billing_information"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.lastmanstandinglayout2.BillingInformationActivity">

    <TextView
        android:text="@string/app_name"
        android:layout_width="379dp"
        android:layout_height="wrap_content"
        android:id="@+id/textView61"
        android:textAlignment="center"
        android:textSize="30sp"
        android:textColor="@color/colorPrimary"
        android:textStyle="normal|bold|italic"
        android:fontFamily="serif"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="16dp"
        android:layout_marginTop="48dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHorizontal_bias="0.56"
        tools:ignore="UnusedAttribute" />

    <TextView
        android:text="@string/form_balance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView63"
        android:textSize="18sp"
        android:textColor="@color/blackText"
        android:layout_marginTop="40dp"
        app:layout_constraintTop_toBottomOf="@+id/textView61"
        android:layout_marginStart="128dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="128dp" />

    <TextView
        android:text="@string/balance_sample"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView64"
        android:textSize="18sp"
        android:layout_marginStart="24dp"
        app:layout_constraintLeft_toRightOf="@+id/textView63"
        android:layout_marginLeft="24dp"
        app:layout_constraintTop_toTopOf="@+id/textView63" />

    <TextView
        android:text="@string/add_funds"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView65"
        android:textSize="18sp"
        android:textColor="@color/colorPrimary"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="16dp"
        android:layout_marginTop="40dp"
        app:layout_constraintTop_toBottomOf="@+id/textView63" />

    <TextView
        android:text="@string/cash_out"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView66"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="16dp"
        android:layout_marginTop="40dp"
        app:layout_constraintTop_toBottomOf="@+id/textView65"
        android:textSize="18sp"
        android:textColor="@color/colorPrimary" />
</android.support.constraint.ConstraintLayout>
